--- a/1.单体架构项目设计和数据库设计.md
+++ b/1.单体架构项目设计和数据库设计.md
@@ -390,3 +390,69 @@ PUBLIC "-//ibatis.apache.org//DTD Mapper 3.0//EN"
 
 </mapper>
 ```
+
+## 集成Druid连接池
+1. 集成Druid依赖
+```xml
+<dependency>
+	<groupId>com.alibaba</groupId>
+	<artifactId>druid</artifactId>
+	<version>1.1.0</version>
+</dependency>
+```
+2. 配置Druid Config配置类
+```java
+@Configuration
+public class DruidConfig {
+
+	@ConfigurationProperties(prefix="spring.druid")
+	@Bean(initMethod="init", destroyMethod="close")
+	public DruidDataSource dataSource() {
+		DruidDataSource dataSource = new DruidDataSource();
+		dataSource.setProxyFilters(Lists.newArrayList(statFilter()));
+		return dataSource;
+	}
+	
+	/**
+	 * 慢日志记录
+	 * @return
+	 */
+	@Bean
+	public Filter statFilter() {
+		StatFilter filter = new StatFilter();
+		filter.setSlowSqlMillis(20);
+		filter.setLogSlowSql(true);
+		filter.setMergeSql(true);
+		return filter;
+	}
+	
+	@Bean
+	public ServletRegistrationBean servletRegistrationBean() {
+		return new ServletRegistrationBean(new StatViewServlet(),"/druid/*");
+	}
+}
+
+```
+
+3. 改变properties中配置的格式
+```conf
+spring.druid.driverClassName=com.mysql.jdbc.Driver
+spring.druid.url=jdbc:mysql://whoiszxl.com:3306/micro_house?characterEncoding=UTF-8
+spring.druid.username=micro_house
+spring.druid.password=669731945
+
+# 最大连接数
+spring.druid.maxActive=30
+# 最小连接数
+spring.druid.minIdle=5
+# 获取连接的最大等待时间
+spring.druid.maxWait=10000
+# 解决mysql 8小时问题  MySQL会主动断开超过8小时空闲的链接
+spring.druid.validationQuery=SELECT 'x'
+# 空闲链接检查时间间隔
+spring.druid.timeBetweenEvictionRunsMillis=60000
+# 空闲链接最小空闲时间
+spring.druid.minEvictableIdleTimeMillis=300000
+```
+
+4. 然后可以直接使用了，进入到config配置类里设置的url可以进入druid管理界面中，可以查看到数据源，SQL监控，SQL防火墙等等工具。
