--- a/1.单体架构项目设计和数据库设计.md
+++ b/1.单体架构项目设计和数据库设计.md
@@ -456,3 +456,28 @@ spring.druid.minEvictableIdleTimeMillis=300000
 ```
 
 4. 然后可以直接使用了，进入到config配置类里设置的url可以进入druid管理界面中，可以查看到数据源，SQL监控，SQL防火墙等等工具。
+
+## 集成freemarker模板
+1. 集成依赖
+```xml
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-freemarker</artifactId>
+</dependency>
+```
+
+2. 配置properties
+```conf
+# freemarker 配置
+spring.freemarker.charset=UTF-8
+spring.freemarker.content-type=text/html;charset=UTF-8
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.expose-spring-macro-helpers=true
+spring.freemarker.suffix=.ftl
+
+spring.freemarker.settings.datetime_format=yyyy-MM-dd HH:mm:ss
+spring.freemarker.settings.default_encoding=UTF-8
+```
+
+3. 然后直接将数据渲染到model中，然后freemarker页面使用`${user.username}`这种格式就能获取到值
