获取邮件后点击激活功能

--- a/2.用户模块实现.md
+++ b/2.用户模块实现.md
@@ -35,3 +35,4 @@
 3. 设置默认值，插入时间戳，设置未激活状态
 4. 直接将设置好的对象直接存到数据库了
 5. 发送邮件验证，通过生成一个随机key，然后将key对应上email存入到缓存中，然后通过spring mail将拼装好的url发送给用户
+6. 用户获取到url后点击，执行verify方法，verify中获取到key去cache中获取email，获取到之后更新enable状态
