实现spring拦截器，将session中的用户保存到thread线程中的笔记

--- a/2.用户模块实现.md
+++ b/2.用户模块实现.md
@@ -36,3 +36,11 @@
 4. 直接将设置好的对象直接存到数据库了
 5. 发送邮件验证，通过生成一个随机key，然后将key对应上email存入到缓存中，然后通过spring mail将拼装好的url发送给用户
 6. 用户获取到url后点击，执行verify方法，verify中获取到key去cache中获取email，获取到之后更新enable状态
+
+
+## 用户校验
+
+### 使用sping拦截器实现
+1. 创建拦截器，在pre预处理的方法中校验`/static`和`/error`，对其直接放行
+2. 再去获取session中是否存在user的session，存在则直接获取存入thread线程中
+3. 在after页面渲染完成之后的方法中移除线程中的对象
