拦截器执行顺序和规则配置

--- a/2.用户模块实现.md
+++ b/2.用户模块实现.md
@@ -41,6 +41,8 @@
 ## 用户校验
 
 ### 使用sping拦截器实现
-1. 创建拦截器，在pre预处理的方法中校验`/static`和`/error`，对其直接放行
+1. 创建一個获取session中user的拦截器，在pre预处理的方法中校验`/static`和`/error`，对其直接放行
 2. 再去获取session中是否存在user的session，存在则直接获取存入thread线程中
 3. 在after页面渲染完成之后的方法中移除线程中的对象
+4. 创建一个获取线程中user的拦截器,判断用户状态是否有效,如果用户不存在,就通过判断get,post提交过来的方式返回对应的报错信息和referer页面地址
+5. 然后还要创建一个webMvcConfig类,配置拦截器拦截规则,拦截顺序
