acutator监控依赖添加

--- a/3.打包上传部署及监控.md
+++ b/3.打包上传部署及监控.md
@@ -1,6 +1,6 @@
 # 打包上传部署及监控
 
-## 打包
+## 使用maven插件打包
 1. 在web项目的pom中添加配置maven插件
 ```xml
 	<build>
@@ -50,3 +50,11 @@ java -jar file.jar
 nohup java -jar file.jar &
 ```
 
+## 使用springboot-acutator进行监控
+1. 添加依赖
+```xml
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
+```
