--- a/3.打包上传部署及监控.md
+++ b/3.打包上传部署及监控.md
@@ -58,3 +58,54 @@ nohup java -jar file.jar &
 	<artifactId>spring-boot-starter-actuator</artifactId>
 </dependency>
 ```
+
+2. 配置监控端口,限制在内网使用
+```properties
+management.port=8888
+```
+
+3. 可以通过url访问 `/dump,/flyway,/env,/info`等查询到当前的健康监控信息,更多可以去springboot文档中查询
+
+## 搭建Spring Admin监控平台
+1. 创建一个springboot的admin项目,并添加依赖
+```xml
+<dependency>
+	<groupId>de.codecentric</groupId>
+	<artifactId>spring-boot-admin-server</artifactId>
+	<version>1.5.2</version>
+</dependency>
+
+<dependency>
+	<groupId>de.codecentric</groupId>
+	<artifactId>spring-boot-admin-server-ui</artifactId>
+	<version>1.5.2</version>
+</dependency>
+```
+
+2. 配置admin项目的端口,避免产生冲突,并在application启动类上添加打开adminserver的注解`@EnableAdminServer`
+```java
+@SpringBootApplication
+@EnableAdminServer
+public class SpringAdminApplication {
+
+	public static void main(String[] args) {
+		SpringApplication.run(SpringAdminApplication.class, args);
+	}
+}
+```
+
+3. 在需要监控的项目中添加client依赖
+```xml
+<dependency>
+	<groupId>de.codecentric</groupId>
+	<artifactId>spring-boot-admin-starter-client</artifactId>
+	<version>1.5.2</version>
+</dependency>
+```
+
+4. 添加admin的监控地址
+```properties
+spring.boot.admin.url=http://localhost:8070
+```
+
+5. 然后使用浏览器打开SpringBoot Admin的项目就能监控到实时的健康状态了
