--- a/3.打包上传部署及监控.md
+++ b/3.打包上传部署及监控.md
@@ -1,5 +1,12 @@
 # 打包上传部署及监控
+<!-- TOC -->
 
+- [打包上传部署及监控](#%E6%89%93%E5%8C%85%E4%B8%8A%E4%BC%A0%E9%83%A8%E7%BD%B2%E5%8F%8A%E7%9B%91%E6%8E%A7)
+	- [使用maven插件打包](#%E4%BD%BF%E7%94%A8maven%E6%8F%92%E4%BB%B6%E6%89%93%E5%8C%85)
+	- [使用springboot-acutator进行监控](#%E4%BD%BF%E7%94%A8springboot-acutator%E8%BF%9B%E8%A1%8C%E7%9B%91%E6%8E%A7)
+	- [搭建Spring Admin监控平台](#%E6%90%AD%E5%BB%BAspring-admin%E7%9B%91%E6%8E%A7%E5%B9%B3%E5%8F%B0)
+
+<!-- /TOC -->
 ## 使用maven插件打包
 1. 在web项目的pom中添加配置maven插件
 ```xml
