分库后实现数据一致性比较

--- a/4.微服务初步认识.md
+++ b/4.微服务初步认识.md
@@ -17,3 +17,20 @@
 1. 易于开发维护,项目相对小易于理解,启动时间短开发效率高
 2. 独立部署,并行迭代,伸缩性强,横向纵向扩展皆可,以及按硬件性能需求扩展
 3. 可以使用各种技术
+
+## 分库后实现数据一致性
+
+### 可靠事件模式例子
+1. 支付宝赚钱到余额宝中，支付宝先记录一个扣款事件，存储到数据库中
+2. 然后发送消息到MQ中，余额宝服务再消费MQ，并加钱到余额宝中
+3. 余额宝发送扣款的消息到MQ中，支付宝消费MQ后删除事件记录
+
+为什么使用队列而不是RPC?
+
+1. 调用支付宝服务的时候不依赖余额宝服务，所以用异步方式比较好一点
+2. 数据库记录和定时任务可以集成一体完成
+
+### 补偿模式例子
+1. 外卖下单->餐馆备餐->骑士取餐->送餐到家，中每一个流程都需要往前发送确认消息和往后发送流程消息
+2. 如果其中一个失败，就会向之前的流程进行回滚，开启子事务进行补偿
+3. 补偿模式比较复杂，没有较好的框架实现
