--- a/5.SpringCloud技术选型和基本使用.md
+++ b/5.SpringCloud技术选型和基本使用.md
@@ -12,3 +12,14 @@
 4. 数据库层使用MYSQL,REDIS
 5. 日志使用`ELK`
 6. 监控使用`Spring Admin,Zipkin Dashboard,Hystrix Dashboard,Eureka Admin`
+
+## 服务注册和发现原理
+1. 先有一个注册中心，管理元数据，服务注册信息等等
+2. 服务提供者通过异步的方式将服务注册到注册中心，再通过异步方式发送心跳给注册中心
+3. 服务消费者通过异步模式去查询注册中心服务，查询到了就直接同步去调用合适的服务提供者
+
+## Spring Cloud Eureka
+### 创建Eureka Server
+1. 创建SpringBoot工程，添加eureka-server起步依赖
+2. 配置文件添加eureka server相关配置
+3. 启动类添加注解@enableEurekaServer
