--- a/1.单体架构项目设计和数据库设计.md
+++ b/1.单体架构项目设计和数据库设计.md
@@ -1,5 +1,15 @@
 # 单体架构项目设计和数据库设计
+<!-- TOC -->
 
+- [单体架构项目设计和数据库设计](#%E5%8D%95%E4%BD%93%E6%9E%B6%E6%9E%84%E9%A1%B9%E7%9B%AE%E8%AE%BE%E8%AE%A1%E5%92%8C%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1)
+	- [功能模型](#%E5%8A%9F%E8%83%BD%E6%A8%A1%E5%9E%8B)
+	- [SQL](#sql)
+	- [整合MyBatis](#%E6%95%B4%E5%90%88mybatis)
+	- [集成Druid连接池](#%E9%9B%86%E6%88%90druid%E8%BF%9E%E6%8E%A5%E6%B1%A0)
+	- [集成freemarker模板](#%E9%9B%86%E6%88%90freemarker%E6%A8%A1%E6%9D%BF)
+	- [拆分为Module多模块](#%E6%8B%86%E5%88%86%E4%B8%BAmodule%E5%A4%9A%E6%A8%A1%E5%9D%97)
+
+<!-- /TOC -->
 ## 功能模型
 * 房屋列表，房屋详情，房产收藏  -> 用户，房屋，小区
 * 经纪人列表，经纪人详情       ->  经纪人，用户，经纪机构
