--- a/2.用户模块实现.md
+++ b/2.用户模块实现.md
@@ -1,5 +1,14 @@
 # 用户模块实现
+<!-- TOC -->
 
+- [用户模块实现](#%E7%94%A8%E6%88%B7%E6%A8%A1%E5%9D%97%E5%AE%9E%E7%8E%B0)
+	- [用户注册流程](#%E7%94%A8%E6%88%B7%E6%B3%A8%E5%86%8C%E6%B5%81%E7%A8%8B)
+		- [1.编写controller代码](#1%E7%BC%96%E5%86%99controller%E4%BB%A3%E7%A0%81)
+		- [2.编写userService的添加逻辑](#2%E7%BC%96%E5%86%99userservice%E7%9A%84%E6%B7%BB%E5%8A%A0%E9%80%BB%E8%BE%91)
+	- [用户校验](#%E7%94%A8%E6%88%B7%E6%A0%A1%E9%AA%8C)
+		- [使用sping拦截器实现](#%E4%BD%BF%E7%94%A8sping%E6%8B%A6%E6%88%AA%E5%99%A8%E5%AE%9E%E7%8E%B0)
+
+<!-- /TOC -->
 ## 用户注册流程
 
 ### 1.编写controller代码
