--- a/5.SpringCloud技术选型和基本使用.md
+++ b/5.SpringCloud技术选型和基本使用.md
@@ -1,5 +1,14 @@
 # SpringCloud技术选型和基本使用
+<!-- TOC -->
 
+- [SpringCloud技术选型和基本使用](#springcloud%E6%8A%80%E6%9C%AF%E9%80%89%E5%9E%8B%E5%92%8C%E5%9F%BA%E6%9C%AC%E4%BD%BF%E7%94%A8)
+    - [技术选型三要素](#%E6%8A%80%E6%9C%AF%E9%80%89%E5%9E%8B%E4%B8%89%E8%A6%81%E7%B4%A0)
+    - [微服务架构设计](#%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A1)
+    - [服务注册和发现原理](#%E6%9C%8D%E5%8A%A1%E6%B3%A8%E5%86%8C%E5%92%8C%E5%8F%91%E7%8E%B0%E5%8E%9F%E7%90%86)
+    - [Spring Cloud Eureka](#spring-cloud-eureka)
+        - [创建Eureka Server](#%E5%88%9B%E5%BB%BAeureka-server)
+
+<!-- /TOC -->
 ## 技术选型三要素
 1. 保持技术面的广度和深度，涉猎多点技术
 2. 把握分析技术选项的优缺点
