--- a/4.微服务初步认识.md
+++ b/4.微服务初步认识.md
@@ -1,5 +1,17 @@
 # 微服务初步认识
+<!-- TOC -->
 
+- [微服务初步认识](#%E5%BE%AE%E6%9C%8D%E5%8A%A1%E5%88%9D%E6%AD%A5%E8%AE%A4%E8%AF%86)
+    - [单体架构](#%E5%8D%95%E4%BD%93%E6%9E%B6%E6%9E%84)
+        - [单体架构不足](#%E5%8D%95%E4%BD%93%E6%9E%B6%E6%9E%84%E4%B8%8D%E8%B6%B3)
+    - [微服务架构](#%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84)
+        - [什么是微服务架构](#%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84)
+        - [优势](#%E4%BC%98%E5%8A%BF)
+    - [分库后实现数据一致性](#%E5%88%86%E5%BA%93%E5%90%8E%E5%AE%9E%E7%8E%B0%E6%95%B0%E6%8D%AE%E4%B8%80%E8%87%B4%E6%80%A7)
+        - [可靠事件模式例子](#%E5%8F%AF%E9%9D%A0%E4%BA%8B%E4%BB%B6%E6%A8%A1%E5%BC%8F%E4%BE%8B%E5%AD%90)
+        - [补偿模式例子](#%E8%A1%A5%E5%81%BF%E6%A8%A1%E5%BC%8F%E4%BE%8B%E5%AD%90)
+
+<!-- /TOC -->
 ## 单体架构
 ### 单体架构不足
 1. 复杂性高,代码晦涩,难以修改重构
