实现eureka的消费者client

--- a/5.SpringCloud技术选型和基本使用.md
+++ b/5.SpringCloud技术选型和基本使用.md
@@ -7,6 +7,7 @@
     - [服务注册和发现原理](#%E6%9C%8D%E5%8A%A1%E6%B3%A8%E5%86%8C%E5%92%8C%E5%8F%91%E7%8E%B0%E5%8E%9F%E7%90%86)
     - [Spring Cloud Eureka](#spring-cloud-eureka)
         - [创建Eureka Server](#%E5%88%9B%E5%BB%BAeureka-server)
+        - [创建Eureka消费者](#%E5%88%9B%E5%BB%BAeureka%E6%B6%88%E8%B4%B9%E8%80%85)
 
 <!-- /TOC -->
 ## 技术选型三要素
@@ -32,3 +33,9 @@
 1. 创建SpringBoot工程，添加eureka-server起步依赖
 2. 配置文件添加eureka server相关配置
 3. 启动类添加注解@enableEurekaServer
+
+### 创建Eureka消费者
+1. pom添加eureka的起步依赖
+2. 配置文件添加euraka.client的相关配置
+3. 启动类添加注解@EnableDiscoveryClient
+
