eureka实现高可用

--- a/5.SpringCloud技术选型和基本使用.md
+++ b/5.SpringCloud技术选型和基本使用.md
@@ -8,6 +8,7 @@
     - [Spring Cloud Eureka](#spring-cloud-eureka)
         - [创建Eureka Server](#%E5%88%9B%E5%BB%BAeureka-server)
         - [创建Eureka消费者](#%E5%88%9B%E5%BB%BAeureka%E6%B6%88%E8%B4%B9%E8%80%85)
+        - [实现高可用](#%E5%AE%9E%E7%8E%B0%E9%AB%98%E5%8F%AF%E7%94%A8)
 
 <!-- /TOC -->
 ## 技术选型三要素
@@ -39,3 +40,6 @@
 2. 配置文件添加euraka.client的相关配置
 3. 启动类添加注解@EnableDiscoveryClient
 
+### 实现高可用
+1. 创建两个eureka-server,分别指定各自的`server.port`
+2. 配置各自的`eureka.client.serviceUrl.defaultZone`,分别互相指向对方的eureka地址
