--- a/5.SpringCloud技术选型和基本使用.md
+++ b/5.SpringCloud技术选型和基本使用.md
@@ -9,6 +9,8 @@
         - [创建Eureka Server](#%E5%88%9B%E5%BB%BAeureka-server)
         - [创建Eureka消费者](#%E5%88%9B%E5%BB%BAeureka%E6%B6%88%E8%B4%B9%E8%80%85)
         - [实现高可用](#%E5%AE%9E%E7%8E%B0%E9%AB%98%E5%8F%AF%E7%94%A8)
+        - [Eureka核心特性](#eureka%E6%A0%B8%E5%BF%83%E7%89%B9%E6%80%A7)
+        - [Eureka缺点](#eureka%E7%BC%BA%E7%82%B9)
 
 <!-- /TOC -->
 ## 技术选型三要素
@@ -43,3 +45,14 @@
 ### 实现高可用
 1. 创建两个eureka-server,分别指定各自的`server.port`
 2. 配置各自的`eureka.client.serviceUrl.defaultZone`,分别互相指向对方的eureka地址
+
+### Eureka核心特性
+1. Eureka通过互相注册与复制支持高可用
+2. Eureka支持用户认证
+3. Eureka Client支持注册表缓存(容错机制)
+4. Eureka解决了网络分区故障,使用其保护模式,一定的服务不可连接的时候就使用,zk是使用选举导致服务不可用
+5. 服务提供方上报健康检查信息
+6. Eureka支持Restful API
+
+### Eureka缺点
+不支持事件(注册,注销,失效)通知
