eureka接入ribbon负载均衡

--- a/5.SpringCloud技术选型和基本使用.md
+++ b/5.SpringCloud技术选型和基本使用.md
@@ -13,6 +13,9 @@
         - [Eureka缺点](#eureka%E7%BC%BA%E7%82%B9)
     - [使用RestTemplate](#%E4%BD%BF%E7%94%A8resttemplate)
         - [如何接入](#%E5%A6%82%E4%BD%95%E6%8E%A5%E5%85%A5)
+    - [使用 Spring Cloud Ribbon](#%E4%BD%BF%E7%94%A8-spring-cloud-ribbon)
+        - [简介](#%E7%AE%80%E4%BB%8B)
+        - [服务消费者接入ribbon(使用Eureka整合)](#%E6%9C%8D%E5%8A%A1%E6%B6%88%E8%B4%B9%E8%80%85%E6%8E%A5%E5%85%A5ribbon%E4%BD%BF%E7%94%A8eureka%E6%95%B4%E5%90%88)
 
 <!-- /TOC -->
 ## 技术选型三要素
@@ -70,3 +73,14 @@
 1. 创建httpclient bean
 2. 创建RestTemplate bean
 3. 添加注解@LoadBalanced
+
+
+## 使用 Spring Cloud Ribbon
+### 简介
+1. 是Netflix公司发布的客户端负载均衡器
+2. 已经集成在Spring Cloud Netflix套件中
+
+### 服务消费者接入ribbon(使用Eureka整合)
+1. pom增加Ribbon起步依赖
+2. RestTemplate添加`@LoadBalanced`注解
+3. 触发服务调用观察日志
