--- a/5.SpringCloud技术选型和基本使用.md
+++ b/5.SpringCloud技术选型和基本使用.md
@@ -16,6 +16,8 @@
     - [使用 Spring Cloud Ribbon](#%E4%BD%BF%E7%94%A8-spring-cloud-ribbon)
         - [简介](#%E7%AE%80%E4%BB%8B)
         - [服务消费者接入ribbon(使用Eureka整合)](#%E6%9C%8D%E5%8A%A1%E6%B6%88%E8%B4%B9%E8%80%85%E6%8E%A5%E5%85%A5ribbon%E4%BD%BF%E7%94%A8eureka%E6%95%B4%E5%90%88)
+        - [服务消费者接入ribbon(脱离eureka)](#%E6%9C%8D%E5%8A%A1%E6%B6%88%E8%B4%B9%E8%80%85%E6%8E%A5%E5%85%A5ribbon%E8%84%B1%E7%A6%BBeureka)
+        - [Java代码自定义Ribbon配置](#java%E4%BB%A3%E7%A0%81%E8%87%AA%E5%AE%9A%E4%B9%89ribbon%E9%85%8D%E7%BD%AE)
 
 <!-- /TOC -->
 ## 技术选型三要素
@@ -84,3 +86,12 @@
 1. pom增加Ribbon起步依赖
 2. RestTemplate添加`@LoadBalanced`注解
 3. 触发服务调用观察日志
+4. 简单来说添加依赖后直接复制一个项目,运行在不同端口就OK了
+
+### 服务消费者接入ribbon(脱离eureka)
+1. 在gateway网关项目中添加ribbon起步依赖(移除eureka依赖和@enableDiscoverClient注解)
+2. 然后在配置文件中添加`listOfServers`配置,配置需要负载均衡跳转的URL地址
+
+### Java代码自定义Ribbon配置
+1. 创建客户端配置类
+2. 通过@RibbonClient指定客户端配置类
